$Date$

VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/

Version 2.1-0 (opened September 8, 2011)

	* New major version opened with the release of vegan_2.0-0 on
	September 8, 2011.

	* permatswap: there was a bug in internal C routine, and therefore
	not all permissible swaps were performed. Based on limited
	analysis, the effects of this bug seem to be negligible. 
	It is, however, recommended to re-run all analyses.

	* New functions: permatfull1 and permatswap1. Both functions
	return a single permuted matrix. These functions are now 
	called repeatedly by the corresponding permatfull and permatswap
	functions.

	* New function: clamtest (with summary and plot methods).
	The method uses a multinomial model based on estimated species
	relative abundance in two habitats, it minimizes bias 
	due to differences in sampling intensities between two 
	habitat types as well as bias due to insufficient sampling within each
	habitat. The method permits a robust statistical classification 
	of habitat specialists and generalists, without excluding rare 
	species a priori. Based on Chazdon et al. 2011 (Ecology, 92, 1332--1343).


Version 2.0-0 (released September 8, 2011)

	* opened the release candidate ov vegan_2.0-0 on September 3,
	2011. 

	* some old functions used attributes(x)$which instead of more
	correct attr(x, "which"), and in addition postMDS() used
	attributes(x)$names instead of names(). Concerns anosim(),
	initMDS(), postMDS(), mantel(), mantel.partial() and
	mso(). initMDS() was one of the two functions that was unchanged
	since the first vegan release on 6/9/01, and it was changed day
	before it turned ten-years-old. After this, wisconsin() is the
	only unchanged function from the first release.

	* vegan-defunct: put definitions of removed "new" permutation
	functions to vegan-defunct and have a vegan-defunct.Rd for them. 

Version 1.92-2 (closed September 3, 2011)

	* monoMDS: saves and displays info on the dissimilarities used,